--- a/resources/views/hello.phtml
+++ b/resources/views/hello.phtml
@@ -5,24 +5,32 @@
 <head>
     <title>Legion Framework | Hello!</title>
     <link rel="icon" type="text/image" href="<?= $favicon ?>">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.2/css/bulma.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid">
-        <header class="page-header">
-            <h1 class="page-title"><?= $framework ?></h1>
-        </header>
-        <section style="min-height: 400px">
-            <h3>Welcome!</h3>
-            <p>Welcome to the Legion Framework!</p>
-            <p>The <strong>Legion Framework</strong> is a microframework developed by <a href="https://github.com/phplegends">PhpLegends</a> team.</p>
-            <p>You are showing this page because it was defined in app/routes.php. See below:</p>
+    <header class="hero is-primary">
+        <div class="hero-body">
+            <div class="container">
+                 <h1 class="title"><?= $framework ?></h1>
+            </div>
+        </div>
+    </header>
 
+
+    
+    <section class="section">
+        <div class="container">
+            <h3 class="title ">Welcome!</h3>
+            <p>The <strong>Legion Framework</strong> is a microframework developed by <a href="https://github.com/phplegends">PhpLegends</a> team.</p>
+            <p class="block">You are showing this page because it was defined in <code>app/routes.php</code>. See below:</p>
             <pre><?= htmlentities(file_get_contents(APP_PATH . '/routes.php')) ?></pre>
-        </section>
-        <footer class="text-right">
+        </div>
+    </section>
+
+    <footer class="section footer">
+        <p class="content has-text-centered block">
             Special thanks to <a href="https://github.com/brcontainer">BrContainer</a>
-        </footer>
-    </div>
+        </p>
+    </footer>
 </body>
 </html>
